--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,22 @@
     line-height: 50px; background: #000; color: #fff; text-align: center;
     transition: all 0.5s; font-size: 14px;}
 .skip:focus {top: 0;}
+.hide {position: absolute; left: -5000px;}
+/* 한솔홈데크 */
+header {height: 81px; text-align: center;}
+header h1 {position: absolute; left: 50px; top: 0; padding: 14px 0 0;}
+header h1 a {display: block; width: 110px; height: 48px; background: url(../img/hansol_Img.png) no-repeat -300px 0; color: transparent;}
+/* MENU */
+header .lnb li {display: inline-block;}
+header .lnb li a {display: block; height: 81px; padding: 0 35px; font-size: 17px; color: #333; line-height: 81px;}
+header .lnb li a:hover {color: #2d5b79; font-weight: bold;}
+header .lnb li a span {position: relative;}
+header .lnb li a:hover span:after {position: absolute; left: 0; bottom: -9px; content: ""; display: block; width: 100%; height: 1px; background: #2d5b79;}
+/* 관련정보 */
+header .spot {position: absolute; right: 50px; top: 0;}
+header .spot li {position: relative; float: left;}
+header .spot li:after {content: ""; position: absolute; left: 0; top: 50%; width: 1px; height: 7px; background: #ccc; transform: translateY(-50%);}
+header .spot li:first-child:after { display: none;}
+header .spot li a {display: block; height: 81px; padding: 0 10px; line-height: 81px;}
+header .spot li:last-child a {padding-right: 0;}
 
-header {text-align: center;}
-header h1 { position: absolute; left: 50px; top: 0;}
-header .spot { position: absolute; right: 50px; top: 0;}
