한솔홈데크 비주얼 영역 버튼 부분 완성

--- a/css/index.css
+++ b/css/index.css
@@ -22,4 +22,28 @@ header .spot li:after {content: ""; position: absolute; left: 0; top: 50%; width
 header .spot li:first-child:after { display: none;}
 header .spot li a {display: block; height: 81px; padding: 0 10px; line-height: 81px;}
 header .spot li:last-child a {padding-right: 0;}
+/*비주얼*/
+/*버튼*/
+.visual {position: relative; padding: 0 50px;}
+.visual .prev,
+.visual .next {display: block; position: absolute; top: 50%; transform: translateY(50%); width: 25px; height: 47px; background: url(../img/hansol_Img.png) no-repeat; color: transparent;}
+.visual .prev {left: 82px; background-position: -128px -60px;}
+.visual .next {right: 82px; background-position: -158px -60px;}
+.visual .control {position: absolute; left: 0; bottom: 55px; width: 100%; text-align: center;}
+.visual .control > div {display:  inline-block; position: relative; padding: 0 45px 0 0;}
+.visual .control > div > div {position: absolute; right: 0;}
+.visual .control > div > div a {display: inline-block; overflow: hidden; width: 8px; height: 9px; margin: 0 0 0 7px; background: url(../img/hansol_Img.png) no-repeat; opacity: 0.5;}
+.visual .control > div > div a.on {opacity: 1;}
+.visual .control > div > div a.play {background-position: -108px -72px;}
+.visual .control > div > div a.pause {background-position: -108px -60px;}
+.visual .control ul {display: inline-block; position: relative; top: -7px; font-size: 0;}
+.visual .control li {display: inline-block; padding: 0 3px;}
+.visual .control .on a {background: #fff;}
+.visual .control li a {display: block; width: 50px; height: 3px; background: rgba(255,255,255,0.5);}
+.visual .control a {color: transparent;}
+/*배경*/
+.visual .con > div {height: 640px;}
+.visual .con .slide{ background: url(../img/bg_main02.jpg) no-repeat center; }
+
+
 
