--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,10 @@
     transition: all 0.5s; font-size: 14px;}
 .skip:focus {top: 0;}
 .hide {position: absolute; left: -5000px;}
+
 /* 한솔홈데크 */
-header {height: 81px; text-align: center;}
+body {min-width: 1280px;}
+header {position: relative; height: 81px; text-align: center;}
 header h1 {position: absolute; left: 50px; top: 0; padding: 14px 0 0;}
 header h1 a {display: block; width: 110px; height: 48px; background: url(../img/hansol_Img.png) no-repeat -300px 0; color: transparent;}
 /* MENU */
@@ -43,7 +45,8 @@ header .spot li:last-child a {padding-right: 0;}
 .visual .control a {color: transparent;}
 /*배경*/
 .visual .con > div {height: 640px;}
-.visual .con .slide{ background: url(../img/bg_main02.jpg) no-repeat center; }
-
+.visual .con .slide{background: url(../img/bg_main02.jpg) no-repeat center; color: #fff; font-size: 32px; line-height: 46px;}
+.visual .con .slide p {padding: 19px 0 0; font-size: 20px; line-height: 100%;}
+.visual .con .slide .txt {position: absolute; left: 50%; top: 175px;}
 
 
