hansol 제품정보영역 완료

--- a/css/index.css
+++ b/css/index.css
@@ -49,4 +49,23 @@ header .spot li:last-child a {padding-right: 0;}
 .visual .con .slide p {padding: 19px 0 0; font-size: 20px; line-height: 100%;}
 .visual .con .slide .txt {position: absolute; left: 50%; top: 175px;}
 
+/*64 52*/
+.product a {display: block; color: #001829; font-size: 15px;}
+.product a:hover {color: #2d5b79; font-weight: bold;}
+.product a:before {content: ""; display: block; margin: 0 0 26px; width: 64px; height: 52px; background: url(../img/hansol_Img.png) no-repeat;}
+.product ul {padding: 46px 0 41px; text-align: center; font-size: 0;}
+.product li {display: inline-block; padding: 0 55px; text-align: center;}
+.product li:nth-child(1) a:before {background-position: -3px -118px;}
+.product li:nth-child(2) a:before {background-position: -75px -118px;}
+.product li:nth-child(3) a:before {background-position: -148px -118px;}
+.product li:nth-child(4) a:before {background-position: -219px -118px;}
+.product li:nth-child(5) a:before {background-position: -292px -118px;}
+.product li:nth-child(6) a:before {background-position: -364px -118px;}
+.product li:nth-child(1) a:hover:before {background-position: -3px -184px;}
+.product li:nth-child(2) a:hover:before {background-position: -75px -184px;}
+.product li:nth-child(3) a:hover:before {background-position: -148px -184px;}
+.product li:nth-child(4) a:hover:before {background-position: -219px -184px;}
+.product li:nth-child(5) a:hover:before {background-position: -292px -184px;}
+.product li:nth-child(6) a:hover:before {background-position: -364px -184px;}
+
 
