--- a/css/index.css
+++ b/css/index.css
@@ -11,12 +11,14 @@ body {min-width: 1280px;}
 header {position: relative; height: 81px; text-align: center;}
 header h1 {position: absolute; left: 50px; top: 0; padding: 14px 0 0;}
 header h1 a {display: block; width: 110px; height: 48px; background: url(../img/hansol_Img.png) no-repeat -300px 0; color: transparent;}
+
 /* MENU */
 header .lnb li {display: inline-block;}
 header .lnb li a {display: block; height: 81px; padding: 0 35px; font-size: 17px; color: #333; line-height: 81px;}
 header .lnb li a:hover {color: #2d5b79; font-weight: bold;}
 header .lnb li a span {position: relative;}
 header .lnb li a:hover span:after {position: absolute; left: 0; bottom: -9px; content: ""; display: block; width: 100%; height: 1px; background: #2d5b79;}
+
 /* 관련정보 */
 header .spot {position: absolute; right: 50px; top: 0;}
 header .spot li {position: relative; float: left;}
@@ -24,32 +26,17 @@ header .spot li:after {content: ""; position: absolute; left: 0; top: 50%; width
 header .spot li:first-child:after { display: none;}
 header .spot li a {display: block; height: 81px; padding: 0 10px; line-height: 81px;}
 header .spot li:last-child a {padding-right: 0;}
+
 /*비주얼*/
-/*버튼*/
 .visual {position: relative; padding: 0 50px;}
-.visual .prev,
-.visual .next {display: block; position: absolute; top: 50%; transform: translateY(50%); width: 25px; height: 47px; background: url(../img/hansol_Img.png) no-repeat; color: transparent;}
-.visual .prev {left: 82px; background-position: -128px -60px;}
-.visual .next {right: 82px; background-position: -158px -60px;}
-.visual .control {position: absolute; left: 0; bottom: 55px; width: 100%; text-align: center;}
-.visual .control > div {display:  inline-block; position: relative; padding: 0 45px 0 0;}
-.visual .control > div > div {position: absolute; right: 0;}
-.visual .control > div > div a {display: inline-block; overflow: hidden; width: 8px; height: 9px; margin: 0 0 0 7px; background: url(../img/hansol_Img.png) no-repeat; opacity: 0.5;}
-.visual .control > div > div a.on {opacity: 1;}
-.visual .control > div > div a.play {background-position: -108px -72px;}
-.visual .control > div > div a.pause {background-position: -108px -60px;}
-.visual .control ul {display: inline-block; position: relative; top: -7px; font-size: 0;}
-.visual .control li {display: inline-block; padding: 0 3px;}
-.visual .control .on a {background: #fff;}
-.visual .control li a {display: block; width: 50px; height: 3px; background: rgba(255,255,255,0.5);}
-.visual .control a {color: transparent;}
+
 /*배경*/
 .visual .con > div {height: 640px;}
 .visual .con .slide{background: url(../img/bg_main02.jpg) no-repeat center; color: #fff; font-size: 32px; line-height: 46px;}
 .visual .con .slide p {padding: 19px 0 0; font-size: 20px; line-height: 100%;}
 .visual .con .slide .txt {position: absolute; left: 50%; top: 175px;}
 
-/*64 52*/
+/*제품정보*/
 .product a {display: block; color: #001829; font-size: 15px;}
 .product a:hover {color: #2d5b79; font-weight: bold;}
 .product a:before {content: ""; display: block; margin: 0 0 26px; width: 64px; height: 52px; background: url(../img/hansol_Img.png) no-repeat;}
@@ -68,4 +55,39 @@ header .spot li:last-child a {padding-right: 0;}
 .product li:nth-child(5) a:hover:before {background-position: -292px -184px;}
 .product li:nth-child(6) a:hover:before {background-position: -364px -184px;}
 
+/* magazine */
+.magazine {position: relative; overflow: hidden; height: 670px; background: #dfd9d1;}
+.magazine h2 {padding: 50px 0 16px; font-size: 28px; color: #000; text-align: center; line-height: 100%;}
+.magazine p {text-align: center; font-size: 14px; color: #3a3b36;}
+.magazine .slide_box > div {position: absolute; left: 50%; top: 150px; transform: translate(-50%, 0); width: 1180px; height: 430px; }
+.magazine .slide_box > div:nth-child(1) {margin-left: -1280px;}
+.magazine .slide_box > div:nth-child(3) {margin-left: 1280px;}
+.magazine .slide_box .left {overflow: hidden; float: left; width: 800px; height: 430px; }
+.magazine .slide_box .left img {width: 100%;}
+.magazine .slide_box .right {float: right; padding: 20px 20px 0; box-sizing: border-box; width: 380px; height: 430px; background: #fff;}
+.magazine .slide_box .right li {padding: 0 0 20px;}
+.magazine .slide_box .right li a {display: table;}
+.magazine .slide_box .right li a div {display: table-cell; position: relative; padding: 0 0 0 100px; height: 82px; vertical-align: middle; font-size: 16px; color: #333;}
+.magazine .slide_box .right li a img {position: absolute; left: 0; top: 0; width: 82px; height: 82px;}
+.magazine .slide_box .right li a strong {display: block; font-size: 13px; color: #000;}
+.magazine.slide .control {bottom: 48px;}
+.magazine.slide .prev {left: 50%; margin: -26px 0 0 -640px;}
+.magazine.slide .next {right: 50%; margin: -26px -640px 0;}
 
+/* slide */
+.slide .prev,
+.slide .next {display: block; position: absolute; top: 50%; transform: translateY(50%); z-index: 10; width: 25px; height: 47px; background: url(../img/hansol_Img.png) no-repeat; color: transparent;}
+.slide .prev {left: 82px; background-position: -128px -60px;}
+.slide .next {right: 82px; background-position: -158px -60px;}
+.slide .control {position: absolute; left: 0; bottom: 55px; width: 100%; text-align: center;}
+.slide .control > div {display:  inline-block; position: relative; padding: 0 45px 0 0;}
+.slide .control > div > div {position: absolute; right: 0;}
+.slide .control > div > div a {display: inline-block; overflow: hidden; width: 8px; height: 9px; margin: 0 0 0 7px; background: url(../img/hansol_Img.png) no-repeat; opacity: 0.5;}
+.slide .control > div > div a.on {opacity: 1;}
+.slide .control > div > div a.play {background-position: -108px -72px;}
+.slide .control > div > div a.pause {background-position: -108px -60px;}
+.slide .control ul {display: inline-block; position: relative; top: -7px; font-size: 0;}
+.slide .control li {display: inline-block; padding: 0 3px;}
+.slide .control .on a {background: #fff;}
+.slide .control li a {display: block; width: 50px; height: 3px; background: rgba(255,255,255,0.5);}
+.slide .control a {color: transparent;}
