배너 및 검색영역 html 작성

--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,8 @@ header .spot li:last-child a {padding-right: 0;}
 .magazine.slide .prev {left: 50%; margin: -26px 0 0 -640px;}
 .magazine.slide .next {right: 50%; margin: -26px -640px 0;}
 
+.notice > div {width: 1180px; margin: 0 auto; padding: 55px 0;}
+
 /* slide */
 .slide .prev,
 .slide .next {display: block; position: absolute; top: 50%; transform: translateY(50%); z-index: 10; width: 25px; height: 47px; background: url(../img/hansol_Img.png) no-repeat; color: transparent;}
