--- a/css/default.css
+++ b/css/default.css
@@ -21,7 +21,7 @@ a{color:#000;text-decoration:none;}
  
 /* Form */
 textarea { border:1px solid #dbdbdb;}
-select { height:32px; font-size:13px; color:#373737; border:1px solid #e9e9e9; background:#fff;border-radius: 5px;}
+select { height:32px; font-size:13px; color:#373737; border:1px solid #e9e9e9; background:#fff;/*border-radius: 5px;*/}
 input[type=tel],
 input[type=time],
 input[type=text],
@@ -31,7 +31,7 @@ input[type=email],
 input[type=file],
 input[type=url],
 input[type=number],
-input[type=date],textarea {width:100%; height:30px; font-size:13px; color:#373737; border:1px solid #e9e9e9; background:#fff; text-indent:20px; border-radius: 5px; transition: all 0.5s; vertical-align:middle;}
+input[type=date],textarea {width:100%; height:30px; font-size:13px; color:#373737; border:1px solid #e9e9e9; background:#fff; text-indent:20px; /*border-radius: 5px;*/ transition: all 0.5s; vertical-align:middle;}
 input::-webkit-input-placeholder{color:#b5b5b5; font-size:12px; line-height:100%;}
 textarea { padding:5px 0;}
 select:focus,
