--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
-@import url(default.css);
 
+@import url(default.css);
 .skip {position: absolute; left: 0; top: -100px; width: 100%; height: 50px; 
     line-height: 50px; background: #000; color: #fff; text-align: center;
     transition: all 0.5s; font-size: 14px;}
@@ -74,7 +74,28 @@ header .spot li:last-child a {padding-right: 0;}
 .magazine.slide .prev {left: 50%; margin: -26px 0 0 -640px;}
 .magazine.slide .next {right: 50%; margin: -26px -640px 0;}
 
+
+.notice {padding: 0 0 100px;}
 .notice > div {width: 1180px; margin: 0 auto; padding: 55px 0;}
+.notice > div .top > ul {float: left;}
+.notice > div .top > ul a {display: block; padding: 140px 0 0; width: 280px; height: 280px; text-align: center; box-sizing: border-box; font-size: 17px; color: #fff; transition: all 0.5s;}
+.notice > div .top > ul a span {display: none;}
+.notice > div .top > ul a:hover {background:  rgba(45,91,121,0.5);}
+.notice > div .top > ul a:hover span {display: block; padding: 20px 0; font-weight: normal;  font-size: 14px;}
+.notice > div .top > ul li {float: left; margin: 0 20px 0 0;}
+.notice > div .top > ul li:nth-child(1) {background: url(../img/galleryview.jpeg) no-repeat;}
+.notice > div .top > ul li:nth-child(2) {background: url(../img/galleryview1.jpeg) no-repeat; color: #000;}
+.notice > div .top > ul li:nth-child(2) a {color: #000;}
+.notice > div .top > ul li:nth-child(3) {background: url(../img/bg_key_link.jpg) no-repeat;}
+.notice > div .top > div {float: left; padding: 36px 20px 0; width: 280px; height: 280px; background: #f2f0ed; box-sizing: border-box;}
+.notice > div .top > div div {padding: 0 0 10px;}
+.notice > div .top > div h2 {padding: 0 0 29px; font-size: 17px; color: #000; text-align: center;}
+.notice > div .top > div select,
+.notice > div .top > div input {width: 100%; height: 45px; border: none; text-indent: 20px;}
+.notice > div .top > div input::-webkit-input-placeholder {color: #949394; font-size: 14px;}
+.notice > div .top > div a {display: block; margin: 5px 0 0; height: 45px; line-height: 45px; text-align: center; color: #fff; background: #2d5b79; font-size: 15px;}
+
+
 
 /* slide */
 .slide .prev,
