--- a/css/index.css
+++ b/css/index.css
@@ -95,6 +95,14 @@ header .spot li:last-child a {padding-right: 0;}
 .notice > div .top > div input::-webkit-input-placeholder {color: #949394; font-size: 14px;}
 .notice > div .top > div a {display: block; margin: 5px 0 0; height: 45px; line-height: 45px; text-align: center; color: #fff; background: #2d5b79; font-size: 15px;}
 
+.notice article {padding: 20px 0;}
+.notice article > div {float: left; position: relative; width: 580px; background: #f2f0ed;}
+.notice article > div a {font-size: 16px; color: #424241 }
+.notice article > div a p {font-size: 12px; color: #979797;}
+.notice article > div h2 {height: 77px; border-bottom: 1px solid #fff; line-height: 77px; font-size:  24px; color: #2d5b79; text-align: center;}
+.notice article > div > a {position: absolute; right: 23px; top: 24px; width: 30px; height: 30px; background: url(../img/hansol_Img.png) no-repeat -196px -60px #fff; border-radius: 30px; color: transparent;}
+.notice article > div.right {float: right;}
+
 
 
 /* slide */
