한솔홈데코 공지, 뉴스 css 완성

--- a/css/index.css
+++ b/css/index.css
@@ -101,7 +101,16 @@ header .spot li:last-child a {padding-right: 0;}
 .notice article > div a p {font-size: 12px; color: #979797;}
 .notice article > div h2 {height: 77px; border-bottom: 1px solid #fff; line-height: 77px; font-size:  24px; color: #2d5b79; text-align: center;}
 .notice article > div > a {position: absolute; right: 23px; top: 24px; width: 30px; height: 30px; background: url(../img/hansol_Img.png) no-repeat -196px -60px #fff; border-radius: 30px; color: transparent;}
+.notice article > div.left ul li {float: left; padding: 35px; box-sizing: border-box; width: 50%; border-left: 1px solid #fff;}
+.notice article > div.left ul li:first-child {border-left: none;}
+.notice article > div.left ul li span {display: block; width: 100%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; line-height: 100%;}
+.notice article > div.left ul li p {padding: 7px 0 10px; line-height: 100%;}
+.notice article > div.left ul li div {line-height: 21px;}
 .notice article > div.right {float: right;}
+.notice article > div.right ul li {position: relative; border-bottom: 1px solid #fff;}
+.notice article > div.right ul li:last-child {border: none;}
+.notice article > div.right ul li a {display: block; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; width: 400px; height: 60px; line-height: 60px; text-indent: 30px;}
+.notice article > div.right p {position: absolute; right: 30px; top: 0;}
 
 
 
