--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,13 @@ footer .top > div div p {display: inline-block; width: 242px; height: 45px; text
 footer .top > div div p strong {padding: 0 0 0 15px; font-size: 20px;}
 footer .top > div div select {padding: 0 0 0 21px; width: 200px; height: 45px; color: #191919; font-size: 12px; box-sizing: border-box; border: none; vertical-align: 3px;}
 
-
+footer .btm {padding: 40px 0 44px; background: #4c5459; text-align: center;}
+footer .btm p {display: inline-block; width: 131px; height: 51px; background: url(../img/hansol_Img.png) no-repeat -150px 0; color: transparent;}
+footer .btm ul {padding: 32px 0 14px;}
+footer .btm li {display: inline-block; position: relative; padding: 0 10px; color: #fff; font-size: 14px;}
+footer .btm li:after {content: ""; position: absolute; right: 0; top: 50%; margin-top: -4px; width: 1px; height: 8px; background: #70767a;}
+footer .btm li:last-child:after {display: none;}
+footer .btm address {font-size: 14px; color: #fff;}
 
 
 
